RF | _PipelineTest > refactoring tests for POM (#1182)